# ai-agents-reality-check

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
ai_agents_reality_check/: __init__.py  agent_benchmark.py  cli.py  logging_config.py  types.py
ai_agents_reality_check/agents/: __init__.py  enhanced_executor.py  recovery.py  tracer.py
ai_agents_reality_check/agents/marketing/: __init__.py  marketing_agent.py  marketing_executor.py  marketing_memory.py  marketing_planner.py
ai_agents_reality_check/agents/real/: __init__.py  real_agent.py  real_executor.py  real_memory.py  real_planner.py  real_recovery.py  real_tracer.py
ai_agents_reality_check/agents/wrapper/: __init__.py  wrapper_agent.py  wrapper_executor.py  wrapper_memory.py  wrapper_utils.py
ai_agents_reality_check/ensemble/: __init__.py  ensemble_benchmark.py
ai_agents_reality_check/utils/: __init__.py  enhanced_statistics.py  helpers.py
docs/: EVALUATION.md  USAGE.md
schemas/trace/: agent_subgoal_trace.schema.json
tests/: __init__.py
tests/unit/: __init__.py  test_marketing_agent.py  test_real_agent.py  test_types.py  test_utils.py  test_wrapper_agent.py
